--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -494,7 +494,7 @@
     "\n",
     "I used [Pierre Sermanet and Yann LeCun's Multiscale convnet architecture](http://yann.lecun.com/exdb/publis/pdf/sermanet-ijcnn-11.pdf). It has 3 convolutional layers for feature extraction, followed by pooling layers and finally a fully connected layer for softmax classification. The unique characterisitc of multi scale features is that the conv layers' output is not only forwarded into subsequent layer, but is also branched off and fed into classifier (e.g. fully connected layer).\n",
     "\n",
-    "![Network architecture](images/arch.png)"
+    "![Network architecture](./images/arch.png)"
    ]
   },
   {
@@ -503,15 +503,6 @@
    "source": [
     "The size of each layer is defined in the HyperParam namedtuple below."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
