Incorporate review changes

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,9 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -909,6 +909,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As visible from the above plots, all images appear to be good quality except the last one i.e. \"Slippery road ahead\". As the image appears quite blurred, the model might misclassify it. Moreover, there's a label below the image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
@@ -1012,7 +1019,9 @@
     "collapsed": true
    },
    "source": [
-    "As visible from the above visualization, the model performs accurately for all the images. Compared to the rest, the model is less confident for the slippery road image due to the blurriness of the image."
+    "As visible from the above visualization, the model performs accurately for all the images. Compared to the rest, the model is less confident for the slippery road image due to the blurriness of the image.  \n",
+    "\n",
+    "**As calculated before, the accuracy on the original test set was 97.64% whereas it is 100% on these 5 images taken from the web.**"
    ]
   },
   {
