Describe solution finding approach

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -805,8 +805,23 @@
    "metadata": {},
    "source": [
     "### Q5 - Solution Approach\n",
-    "As visible from the above training logs, this network with the choice of hyperparameters was able to achieve 98.57% validation accuracy. There is definitely a possibility of improving the accuracy further by exploring other choices of hyperparameters and adding synthetic data.  \n",
-    "I also tried to use the Spatial Transformer network approach but could not get it to work."
+    "As visible from the above training logs, this network with the choice of hyperparameters was able to achieve 98.57% validation accuracy. There is definitely a possibility of improving the accuracy further by exploring other choices of hyperparameters and adding synthetic data.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I would like to highlight that the use of **multiscale convnets** greatly attributed to achieving an **accuracy of 98.57%** on the validation set without any data augmentation.  \n",
+    "Usual ConvNets are organized in strict feed-forward layered architectures in which the output of one layer is fed only to the layer above. \n",
+    "However, in this model, the output of the first stage is branched out and fed to the classifier, in addition to the output of the second stage. Additionally, applying a second subsampling stage on the branched output yielded higher accuracies than with just one. This multiscale technique especially helps in recognizing the features of same classes that look similar but vary in scale [[1]](https://www.researchgate.net/profile/Yann_Lecun/publication/224260345_Traffic_sign_recognition_with_multi-scale_Convolutional_Networks/links/0912f50f9e763201ab000000/Traffic-sign-recognition-with-multi-scale-Convolutional-Networks.pdf). _Using the same network without multiscale features yielded an accuracy of <95% on the validation set._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I also tried to use the [Spatial Transformer Network](https://arxiv.org/abs/1506.02025) module but could not get it to work. STNs have demonstrated the ability of introducing spatial invariance in the networks."
    ]
   },
   {
